# whymp

./: .gitignore  .gitmodules  Makefile.am  NEWS.md  README.md  configure.ac  wmp-gmp.h  wmp.h
generated-src/lib/: abs.h  add.c  add.h  add_1.c  array.h  bool.h  c.h  compare.c  compare.h  computerdivision.h  div.c  div.h  euclideandivision.h  explog.h  fxp.h  int.h  int32.h  int64.h  logical.c  logical.h  logicalold.h  logicalutil.h  mul.c  mul.h  power.h  powm.c  realinfix.h  sqrt.c  sqrt.h  sqrt1.c  sqrt1.h  sqrtinit.h  sub.c  sub.h  sub_1.h  subold.c  toom.c  toom.h  uint32gmp.h  uint64gmp.h  (+12 more)
lib/: add.c  add.h  add_1.c  add_1.h  addold.c  addold.h  alias.h  baseinfo.c  baseinfo.h  binverttab.h  c.h  compare.c  compare.h  div.c  div.h  fxp.h  get_str.c  get_str.h  int32.h  logical.c  logical.h  logicalold.c  logicalold.h  logicalutil.c  logicalutil.h  map.h  minmax.h  mul.c  mul.h  mul_basecase.c  mul_basecase.h  powm.c  powm.h  set.c  set.h  set_str.c  set_str.h  sqrt.c  sqrt.h  sqrt1.c  (+48 more)
